tests/ui/03-fail-repr-no-type.stderr
error: proc-macro derive panicked
 --> tests/ui/03-fail-repr-no-type.rs:5:10
  |
5 | #[derive(ConstEnum)]
  |          ^^^^^^^^^
  |
  = help: message: malformed repr attribute, expected repr(TYPE)

error: malformed `repr` attribute input
 --> tests/ui/03-fail-repr-no-type.rs:6:1
  |
6 | #[repr]
  | ^^^^^^^ help: must be of the form: `#[repr(C)]`
